--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
-<div class="jumbotron text-center font-weight-bold" id="jumbotron"  style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;">
+<div class="jumbotron text-center font-weight-bold" id="jumbotron"  style="background: url({{site.url}}{{site.baseurl}}/img/dwarf.jpg) no-repeat scroll;background-size: cover;">
 	<p class="display-3 text-white">Project ETHOS</p>
-	<p class="display-4 text-white text-center" >An Effective Theory of Structure Formation with New Dark Matter Physics</p>
+	<p class="text-white text-center" >An Effective Theory of Structure Formation with New Dark Matter Physics</p>
 	<p class="lead">
 		<a class="btn btn-secondary" href="intro/2017/02/05/helloworld.html" role="button">About the project</a>
 		<a class="btn btn-secondary" href="intro/2017/02/05/helloworld.html" role="button">Research</a>
