--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,30 +13,34 @@
     <div class="tab-content" id=tab-content>
         <div class="tab-pane text-sm-center active" id="sidebar-home-content">
           <ul class="sidebar-nav">
-	    <li title="Home">
+	    <li title="Navigator">
               <a href="{{site.url}}{{site.baseurl}}/index.html">
 		<i class="fa fa-home" aria-hidden="true"></i>
-		Home  
+		Home
               </a>
 	    </li>
-	    <li title="archives">
+	    <li title="about">
               <a href="{{site.url}}{{site.baseurl}}/index.html#archives">
 		<i class="fa fa-file-archive-o" aria-hidden="true"></i>
-		Archives  
-		<span class="text-warning pull-right">{{ site.posts.size}}</span>
+		About ETHOS
               </a>
 	    </li>
-	    <li title="categories">
+	    <li title="researches">
               <a href="{{site.url}}{{site.baseurl}}/categories.html">
 		<i class="fa fa-tags" aria-hidden="true"></i>
-		Categories 
-		<span class="text-warning pull-right">{{ site.categories.size}}</span>
+		Researches
               </a>
 	    </li>
-	    <li title="messager">
+	    <li title="people">
               <a href="{{site.url}}{{site.baseurl}}/about.html" >
 		<i class="fa fa-comments" aria-hidden="true"></i>
-		Messager
+		People
+              </a>
+	    </li>
+	     <li title="publications">
+              <a href="{{site.url}}{{site.baseurl}}/about.html" >
+		<i class="fa fa-comments" aria-hidden="true"></i>
+		Publications
               </a>
 	    </li>
 	  </ul>
