--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,7 +7,7 @@
  <!-- Sidebar for desktop -->
  <div id="sidebar-wrapper" class="hidden-xs-down">
     <nav class="nav nav-pills flex-sm-row p-3 justify-content-center">
-        <a class="flex-sm-fill text-sm-center nav-link active" href="#sidebar-home-content" data-toggle="tab" role="tab" id="home">Home</a>
+        <a class="flex-sm-fill text-sm-center nav-link active" href="#sidebar-home-content" data-toggle="tab" role="tab" id="home">Navigator</a>
         <a class="flex-sm-fill text-sm-center nav-link hidden-xl-down" href="#sidebar-toc-content" data-toggle="tab" role="tab" id="toc">Toc</a>
     </nav>
     <div class="tab-content" id=tab-content>
@@ -21,7 +21,7 @@
 	    </li>
 	    <li title="about">
               <a href="{{site.url}}{{site.baseurl}}/index.html#archives">
-		<i class="fa fa-file-archive-o" aria-hidden="true"></i>
+		<i class="fa fa-info-circle" aria-hidden="true"></i>
 		About ETHOS
               </a>
 	    </li>
@@ -33,7 +33,7 @@
 	    </li>
 	    <li title="people">
               <a href="{{site.url}}{{site.baseurl}}/about.html" >
-		<i class="fa fa-comments" aria-hidden="true"></i>
+		<i class="fa fa-user" aria-hidden="true"></i>
 		People
               </a>
 	    </li>
