--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -27,7 +27,7 @@
 	    </li>
 	    <li title="researches">
               <a href="{{site.url}}{{site.baseurl}}/categories.html">
-		<i class="fa fa-tags" aria-hidden="true"></i>
+		<i class="fa fa-folder-open" aria-hidden="true"></i>
 		Researches
               </a>
 	    </li>
@@ -39,7 +39,7 @@
 	    </li>
 	     <li title="publications">
               <a href="{{site.url}}{{site.baseurl}}/about.html" >
-		<i class="fa fa-comments" aria-hidden="true"></i>
+		<i class="fa fa-newspaper-o" aria-hidden="true"></i>
 		Publications
               </a>
 	    </li>
