--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 	<p class="display-3 text-white">Project ETHOS</p>
 	<p class="text-white text-center" >An Effective Theory of Structure Formation with New Dark Matter Physics</p>
 	<p class="lead">
-		<a class="btn btn-secondary" href="intro/2017/02/05/helloworld.html" role="button">About the project</a>
+		<a class="btn btn-primary" href="intro/2017/02/05/helloworld.html" role="button">About ETHOS</a>
 		<a class="btn btn-secondary" href="intro/2017/02/05/helloworld.html" role="button">Research</a>
 		<a class="btn btn-secondary" href="intro/2017/02/05/helloworld.html" role="button">People</a> 
 		<a class="btn btn-secondary" href="intro/2017/02/05/helloworld.html" role="button">Publications</a>  
