--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,30 +5,19 @@
         <strong>Credits</strong>
         <table class="table table-sm">
           <tr>
-            <td>Main Director:</td>
-            <td><a href="szhshp.org">Szhshp</a></td>
+            <td>University of Iceland</td>
           </tr>
-          <tr>
-            <td>Dev Engine:</td>
-            <td>Ruby x Jekyll</td>
+            <td>Rannis</td>
           </tr>
-            <tr>
-              <td>Vi Director:</td>
-              <td>Bootstrap</td>
-            </tr>
-            <tr>
-              <td>Co-Vi Director</td>
-              <td>Stylish Portfolio</td>
-            </tr>
           </table>
           <p class="text-muted">Copyright &copy; {{ site.copyright }} 20{{ site.time | date: '%y' }}</p>
         </div>
 
         <div class="col-md-6">
-          <strong>Friend Links</strong>
+          <strong>Useful Links</strong>
           <table class="table table-sm">
             <tr>
-              <td><a href="http://szhshp.org"> szhshp.org</a></td>
+              <td><a href="http://szhshp.org">Ilustris</a></td>
             </tr>
           </table>
         </div>
