--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -20,25 +20,25 @@
               </a>
 	    </li>
 	    <li title="about">
-              <a href="{{site.url}}{{site.baseurl}}/index.html#archives">
+              <a href="{{site.url}}{{site.baseurl}}/about.html">
 		<i class="fa fa-info-circle" aria-hidden="true"></i>
 		About ETHOS
               </a>
 	    </li>
 	    <li title="researches">
-              <a href="{{site.url}}{{site.baseurl}}/categories.html">
+              <a href="{{site.url}}{{site.baseurl}}/research.html">
 		<i class="fa fa-folder-open" aria-hidden="true"></i>
 		Researches
               </a>
 	    </li>
 	    <li title="people">
-              <a href="{{site.url}}{{site.baseurl}}/about.html" >
+              <a href="{{site.url}}{{site.baseurl}}/people.html" >
 		<i class="fa fa-user" aria-hidden="true"></i>
 		People
               </a>
 	    </li>
 	     <li title="publications">
-              <a href="{{site.url}}{{site.baseurl}}/about.html" >
+              <a href="{{site.url}}{{site.baseurl}}/publications.html" >
 		<i class="fa fa-newspaper-o" aria-hidden="true"></i>
 		Publications
               </a>
