--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,25 +2,25 @@
   <div class="container w-100 font-weight-bold">
     <div class="row">
       <div class="col-md-6">
-        <strong>Credits</strong>
-        <table class="table table-sm">
-          <tr>
-            <td>University of Iceland</td>
-          </tr>
-	  <tr>
-            <td>Rannis</td>
-	  </tr>
-	</table>
+        <!-- <strong>Credits</strong> -->
+        <!-- <table class="table table-sm"> -->
+        <!--   <tr> -->
+        <!--     <td>University of Iceland</td> -->
+        <!--   </tr> -->
+	<!--   <tr> -->
+        <!--     <td>Rannis</td> -->
+	<!--   </tr> -->
+	<!-- </table> -->
 	<p class="text-muted">Copyright &copy; {{ site.copyright }} 20{{ site.time | date: '%y' }}</p>
       </div>
 
       <div class="col-md-6">
-	<strong>Useful Links</strong>
-	<table class="table table-sm">
-	  <tr>
-	    <td><a href="http://szhshp.org">Ilustris</a></td>
-	  </tr>
-	</table>
+	<!-- <strong>Useful Links</strong> <\!-- -\-> -->
+	<!-- <table class="table table-sm"> -->
+	<!--   <tr> -->
+	<!--     <td><a href="http://szhshp.org">Ilustris</a></td> -->
+	<!--   </tr> -->
+	<!-- </table>; -->
       </div>
 
     </div>
